have the new release listed in the right place, even if no changes were made in
that repo.

Template for new versions:

## New Tools

## New Features

## Fixes

## Misc Improvements

## Removed

]]]

# Future

## New Tools

## New Features

## Fixes
- `full-heal`: fix ``-r --all_citizens`` option combination not resurrecting citizens

## Misc Improvements

## Removed

# 50.13-r3

## New Tools
- `advtools`: collection of useful commands and overlays for adventure mode
- `advtools`: added an overlay that automatically fixes corrupt throwing/shooting state, preventing save/load crashes
- `advtools`: advtools party - promotes one of your companions to become a controllable adventurer
- `advtools`: advtools pets - fixes pets you gift in adventure mode.
- `pop-control`: (reinstated) limit the maximum size of migrant waves
- `bodyswap`: (reinstated) take control of another unit in adventure mode
- `gui/sitemap`: list and zoom to people, locations, and artifacts
- `devel/tree-info`: print a technical visualization of tree data
- `gui/tiletypes`: interface for modifying map tiles and tile properties
- `fix/population-cap`: fixes the situation where you continue to get migrant waves even when you are above your configured population cap
- `fix/occupancy`: fixes issues where you can't build somewhere because the game tells you an item/unit/building is in the way but there's nothing there
- `fix/sleepers`: (reinstated) fixes sleeping units belonging to a camp that never wake up.
- `timestream`: (reinstated) keep the game running quickly even when there are large numbers of units on the map
- `gui/journal`: fort journal with a multi-line text editor
- `devel/luacov`: (reinstated) add Lua script coverage reporting for use in testing and performance analysis

## New Features
- `buildingplan`: dimension tooltip is now displayed for constructions and buildings that are designated over an area, like bridges and farm plots